Tue Aug 12 21:49:40 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_create_dcom): use the converted
	  result if the argument can be converted to a string, to get rid
	  of invalid access. Thanks to nobu. [ruby-dev:48467] [Bug #10127]

Tue Aug 12 14:22:58 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* configure.in: ignored working directory same as prefix value.
	  [ruby-core:54999] [Bug #8409]

Tue Aug 12 13:34:25 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/fileutils.rb: enable to remove with non-owner directory.
	  [ruby-dev:45976] [Bug #6756]
	* test/fileutils/test_fileutils.rb: add testcase for #6756.

Tue Aug 12 12:57:28 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* vm_exec.c: improve performance in ppc64 arch.
	  [ruby-core:63437] [Feature #9997]

Tue Aug 12 12:14:52 2014  Akira Matsuda <ronnie@dio.jp>

	* lib/fileutils.rb: fix typo.
	  [ruby-dev:47831] [Bug #9180]

Tue Aug 12 10:10:42 2014  Eric Wong  <e@80x24.org>

	* vm_method.c (release_method_definition): use rb_free_method_entry

Tue Aug 12 06:16:09 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: seperate WIN32OLE_METHOD src from
	  win32ole.c.
	* ext/win32ole/win32ole.h: ditto.
	* ext/win32ole/win32ole_method.c: ditto.
	* ext/win32ole/win32ole_method.h: ditto.
	* ext/win32ole/depend: ditto.

Mon Aug 11 22:19:15 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_variable.c (folevariable_inspect): refactoring.

Mon Aug 11 20:47:27 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: separate WIN32OLE_VARIABLE src from
	  win32ole.c
	* ext/win32ole/win32ole.h: ditto.
	* ext/win32ole/win32ole_variable.c: ditto.
	* ext/win32ole/win32ole_variable.h: ditto.
	* ext/win32ole/depend: ditto.

Mon Aug 11 16:17:21 2014  Tony Miller  <mcfiredrill@gmail.com>

	* dir.c (rb_dir_exists_p): [DOC] Document that Dir.exists? is
	  deprecated.  [ruby-core:64135] [Bug #10102]
